# differential-ml

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: CONTRIBUTING.md
examples/: approximate_functions.py
examples/data_generation/: functions.py  random_data.py  test_data_generation.py  test_random_util.py
layers/: backprop_dense_output.py
models/: model_builder.py
pt/: DmlTrainer.py
pt/examples/: ApproximateFunctions.py
pt/layers/: DmlLinear.py
pt/modules/: DmlDataLoader.py  DmlDataset.py  DmlFeedForward.py  DmlLinear.py  DmlLoss.py  DmlModule.py  DmlModuleTest.py  device.py
tf/examples/: approximate_functions.py
tf/layers/: backprop_dense.py  forward_dense.py
tf/models/: model_builder.py
util/: data_util.py
